--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
+    "axios": "^0.19.2",
+    "axios-hooks": "^1.11.0",
     "expo": "~37.0.3",
     "expo-font": "~8.1.0",
     "expo-image-picker": "~8.1.0",
+    "expo-location": "~8.1.0",
     "expo-sharing": "~8.1.0",
     "expo-splash-screen": "^0.2.3",
     "expo-updates": "~0.2.0",
