--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/stack": "^5.5.1",
     "axios": "^0.19.2",
     "axios-hooks": "^1.11.0",
+    "eslint-config-naver": "^2.1.0",
+    "eslint-plugin-import": "^2.21.2",
     "expo": "~37.0.3",
     "expo-font": "~8.1.0",
     "expo-image-picker": "~8.1.0",
@@ -23,6 +25,7 @@
     "expo-splash-screen": "^0.2.3",
     "expo-updates": "~0.2.0",
     "native-base": "^2.13.12",
+    "prop-types": "^15.7.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.5",
@@ -33,11 +36,14 @@
     "react-native-screens": "~2.2.0",
     "react-native-unimodules": "~0.9.0",
     "react-native-web": "~0.11.7",
+    "react-script": "^2.0.5",
     "recoil": "^0.0.10"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "babel-jest": "~25.2.6",
+    "eslint": "^7.3.1",
+    "eslint-plugin-react": "^7.20.0",
     "jest": "~25.2.6",
     "react-test-renderer": "~16.9.0"
   },
